--- a/public/index.html
+++ b/public/index.html
@@ -3,43 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenida</title>
+  <title>Bienvenidos a Sordomundo</title>
   <style>
     body {
       display: flex;
-      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #074535, #3e0c90);
+      color: #fff;
     }
-    div {
+    .container {
       text-align: center;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      max-width: 400px;
+      width: 90%;
     }
     img {
-      max-width: 300px;
+      max-width: 100%;
       height: auto;
       margin-top: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+    p {
+      font-size: 1.2em;
+      margin-bottom: 20px;
     }
     a {
+      display: inline-block;
+      padding: 10px 20px;
       margin-top: 20px;
-      color: #007BFF;
+      background-color: #095e4d;
+      color: #fff;
+      font-size: 1.1em;
+      font-weight: bold;
       text-decoration: none;
-      font-size: 1.2em;
+      border-radius: 5px;
+      transition: background-color 0.3s, transform 0.2s;
     }
     a:hover {
-      text-decoration: underline;
+      background-color: #04794e;
+      transform: scale(1.05);
     }
   </style>
 </head>
 <body>
-  <div>
-    <p>Bienvenidos a Sordomundo, esto es el Backend ya listo para usarse</p>
+  <div class="container">
+    <p>¡Bienvenidos a <strong>Sordomundo</strong>! Este es el Backend, listo para usarse.</p>
     <img src="./imagenes/sordomundo.png" alt="Imagen de bienvenida">
-    <a href="https://frontend-sordomundo-hucx8mjh3-farids-projects-33ebe9be.vercel.app" target="_blank">Visita mi sitio</a>
-    
+    <a href="https://sordomundo.vercel.app" target="_blank">Visita nuestro sitio</a>
   </div>
 </body>
 </html>
